ankit_login_signup

--- a/client/src/Components/Login/login.css
+++ b/client/src/Components/Login/login.css
@@ -181,10 +181,12 @@
      }
      .verifyotp_div{
         margin-top:0% ;
+        padding: 0px 0px 0px 0px;
         width: 80%;
      }
      .signup_div{
         margin-top: 0%;
+        padding: 0px 0px 0px 0px;
         width: 80%;
      }
      .signup_modal_btns{
